Fix lead spacing in blog home template.

--- a/assets/stylesheets/blog/_type.scss
+++ b/assets/stylesheets/blog/_type.scss
@@ -77,6 +77,14 @@
 }
 
 .lead {
+  .home-template & {
+    margin-bottom: 47px; // 64px
+
+    @media (min-width: $screen-sm-min) {
+      margin-bottom: 78px; // 96px
+    }
+  }
+
   .author-template & {
     margin-bottom: 16px;
   }
